Moved all images in new folder named images

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             </div>
         </div>
         <div class="game-screen">
-            <img class="userimg" src="userc.png" alt="user">
-            <img src="vs.png" alt="vurses">
-            <img class="compimg" src="aicpu.png" alt="computer">
+            <img class="userimg" src="images/userc.png" alt="user">
+            <img src="images/vs.png" alt="vurses">
+            <img class="compimg" src="images/aicpu.png" alt="computer">
         </div>
 
         <p class="result_text hide"></p>
